plugins {
    id 'java'
}

group = 'aoc'
version = '1.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation project(':AOCFramework')
    annotationProcessor project(':AOCAnnotationGenerator')
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

// Define a directory for generated sources
def generatedSourcesDir = "$buildDir/generated/sources/annotationProcessor/java/main"

// Configure source sets to include generated sources
sourceSets {
    main {
        java {
            srcDir generatedSourcesDir
        }
    }
}

// Ensure that generated sources are available before compilation
compileJava {
    options.annotationProcessorPath = configurations.annotationProcessor
    doFirst {
        file(generatedSourcesDir).mkdirs()
    }
}
test {
    useJUnitPlatform()
}
